--- a/source/R5T.Groenbjerg.Configuration.Base/R5T.Groenbjerg.Configuration.Base.csproj
+++ b/source/R5T.Groenbjerg.Configuration.Base/R5T.Groenbjerg.Configuration.Base.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0064\source\R5T.T0064\R5T.T0064.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
