--- a/source/R5T.Groenbjerg.Configuration.Sardinia/R5T.Groenbjerg.Configuration.Sardinia.csproj
+++ b/source/R5T.Groenbjerg.Configuration.Sardinia/R5T.Groenbjerg.Configuration.Sardinia.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Aalborg\source\R5T.Aalborg\R5T.Aalborg.csproj" />
     <ProjectReference Include="..\..\..\R5T.Sardinia\source\R5T.Sardinia\R5T.Sardinia.csproj" />
   </ItemGroup>
-
 </Project>
