--- a/source/R5T.Groenbjerg.Configuration.Standard/R5T.Groenbjerg.Configuration.Standard.csproj
+++ b/source/R5T.Groenbjerg.Configuration.Standard/R5T.Groenbjerg.Configuration.Standard.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\R5T.Groenbjerg.Configuration.Sardinia\R5T.Groenbjerg.Configuration.Sardinia.csproj" />
     <ProjectReference Include="..\R5T.Groenbjerg.Configuration.Suebia\R5T.Groenbjerg.Configuration.Suebia.csproj" />
   </ItemGroup>
-
 </Project>
