--- a/source/R5T.Groenbjerg.Configuration.Suebia/R5T.Groenbjerg.Configuration.Suebia.csproj
+++ b/source/R5T.Groenbjerg.Configuration.Suebia/R5T.Groenbjerg.Configuration.Suebia.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Dacia.Extensions\source\R5T.Dacia.Extensions\R5T.Dacia.Extensions.csproj" />
     <ProjectReference Include="..\..\..\R5T.Suebia.Extensions\source\R5T.Suebia.Extensions\R5T.Suebia.Extensions.csproj" />
     <ProjectReference Include="..\R5T.Groenbjerg.Configuration.Base\R5T.Groenbjerg.Configuration.Base.csproj" />
   </ItemGroup>
-
 </Project>
