--- a/source/R5T.Groenbjerg.Construction/R5T.Groenbjerg.Construction.csproj
+++ b/source/R5T.Groenbjerg.Construction/R5T.Groenbjerg.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.Groenbjerg\R5T.Groenbjerg.csproj" />
   </ItemGroup>
